--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -8,3 +8,10 @@ $error-color: #f00;
 $success-color: #008000;
 $primary-color: #3f51b5;
 
+// breakpoints
+$screen-width-xs: 599px;
+$screen-width-sm: 960px;
+$screen-width-md: 1279px;
+$screen-width-lg: 1919px;
+$screen-width-xl: 5000px;
+
